clusters/building-blocks/media/apps/sabnzbd/app/sabnzbd-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/group: media
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/group: media
        app.kubernetes.io/name: sabnzbd
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
            - name: UMASK
              value: "0002"
            - name: UMASK_SET
              value: "0002"
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: SABNZBD__HOST_WHITELIST_ENTRIES
              value: "dl.${DOMAIN_NAME}, dl.home.${DOMAIN_NAME}, sabnzbd, sabnzbd.default, sabnzbd.default.svc, sabnzbd.default.svc.cluster, sabnzbd.default.svc.cluster.local"
            - name: SABNZBD__PORT
              value: "10097"
          image: ghcr.io/home-operations/sabnzbd:5.1.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 10097
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: sabnzbd
          ports:
            - containerPort: 10097
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 10097
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 10097
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config
            - mountPath: /data
              name: sabnzbd-data
            - mountPath: /dev/shm
              name: devshm
            - mountPath: /shared
              name: shared
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/logs
              name: varlogs
            - mountPath: /var/run
              name: varrun
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 3004
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      serviceAccount: default
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      volumes:
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-pvc
        - name: sabnzbd-data
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 6Gi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: varrun
