clusters/building-blocks/media/apps/sabnzbd/app/sabnzbd-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10097
